--- a/frontend/templates/account/login-main.html
+++ b/frontend/templates/account/login-main.html
@@ -1,5 +1,5 @@
 {% extends "layouts/django-material-kit/base-fullscreen.html" %}
-{% load i18n static %}
+{% load i18n static html_tags %}
 {% load account socialaccount %}
 
 {% block extrastyle %}{{ block.super }}<link rel="stylesheet" type="text/css" href="{% static 'utility/css/allauth_forms.css' %}">
