--- a/frontend/templates/account/logout.html
+++ b/frontend/templates/account/logout.html
@@ -42,7 +42,7 @@
           </div>
           <div class="card-body">
             <p>{% trans 'Are you sure you want to sign out?' %}</p>
-            <form method="post" action="{% url 'account_logout' %}">
+            <form method="post" action="{% url 'logout' %}">
               {% csrf_token %}
               {% if redirect_field_value %}
               <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}"/>
