--- a/frontend/templates/account/email.html
+++ b/frontend/templates/account/email.html
@@ -1,7 +1,7 @@
 {% extends "layouts/django-material-kit/base-fullscreen.html" %}
 {% load i18n static %}
 
-{% block extrastyle %}{{ block.super }}<link rel="stylesheet" type="text/css" href="{% static "utility/css/allauth_forms.css" %}">
+{% block extrastyle %}{{ block.super }}<link rel="stylesheet" type="text/css" href="{% static 'utility/css/allauth_forms.css' %}">
 {{ form.media }}
 {% endblock %}
 
@@ -44,11 +44,11 @@
                 <p class="mb-0 text-white text-center">
                   <!-- begin errors -->
                   {% if form.errors and not form.non_field_errors %}
-                  <p class="errornote">{% if form.errors.items|length == 1 %}{% translate "Please correct the error below." %}{% else %}{% translate "Please correct the errors below." %}{% endif %}</p>
+                  <p class="mb-0 text-center">{% if form.errors.items|length == 1 %}{% translate "Please correct the error below." %}{% else %}{% translate "Please correct the errors below." %}{% endif %}</p>
                   {% endif %}
                   {% if form.non_field_errors %}
                   {% for error in form.non_field_errors %}
-                  <p class="errornote">{{ error }}</p>
+                  <div class="alert alert-secondary text-white font-weight-bold" role="alert">{{ error }}</div>
                   {% endfor %}
                   {% endif %}
                   <!-- end errors -->
@@ -78,7 +78,6 @@
                     </label>
                   </div>
                   {% endfor %}
-
                   <div class="buttonHolder">
                     <button class="btn btn-secondary" type="submit" name="action_primary" >{% trans 'Make Primary' %}</button>
                     <button class="btn btn-secondary" type="submit" name="action_send" >{% trans 'Re-send Verification' %}</button>
@@ -93,8 +92,16 @@
               <h6>{% trans "Add E-mail Address" %}</h6>
               <form method="POST" action="{% url 'account_email' %}" class="add_email">
                 {% csrf_token %}
-                {{ form.as_p }}
-                <button class="btn btn-secondary" name="action_add" type="submit">{% trans "Add E-mail" %}</button>
+                <div class="card-body pt-1">
+
+                  {% include 'account/includes/form-fields.html' %}
+
+                  <div class="row">
+                    <div class="col-md-12 text-end ms-auto">
+                      <button class="btn btn-secondary" name="action_add" type="submit">{% trans "Add E-mail" %}</button>
+                    </div>
+                  </div>
+                </div>
               </form>
             {% endif %}
           </div>
@@ -102,9 +109,7 @@
       </div>
     </div>
   </div>
-
-    {% include 'includes/django-material-kit/footer-auth.html' %}
-
+  {% include 'includes/django-material-kit/footer-auth.html' %}
 </div>
 {% endblock %}
 
