--- a/frontend/templates/account/login-dashboard.html
+++ b/frontend/templates/account/login-dashboard.html
@@ -33,15 +33,6 @@
           <div class="card-body">
             <div class="row mt-3">
               <p class="mb-0 text-center">
-                {% if messages %}
-                <!-- begin messages -->
-                <p class="mb-0 text-center">
-                {% for message in messages %}
-                {{ message | safe }}
-                {% endfor %}
-                </p>
-                <!-- end messages -->
-                {% endif %}
                 {% if form.non_field_errors %}
                 <!-- START form non field errors -->
                 <div class="alert alert-secondary text-white font-weight-bold" role="alert">{{ form.non_field_errors }}</div>
@@ -65,32 +56,9 @@
             <form class="login" method="POST" action="{% url 'account_login' %}">
               {% csrf_token %}
               <div class="card-body pt-1">
-                {% for field in form %}
-                <div class="row">
-                  {% if field.errors %}
-                  <div class="alert alert-danger alert-dismissible text-white" role="alert">
-                    <span class="text-sm">{{ field.label }}: {{ field.errors }}</span>
-                    <button type="button" class="btn-close text-lg py-3 opacity-10" data-bs-dismiss="alert" aria-label="Close">
-                      <span aria-hidden="true">&times;</span>
-                    </button>
-                  </div>
-                  {% endif %}
-                  {% if field.help_text %}
-                  <div class="row">
-                    <div class="alert alert-info alert-dismissible text-white" role="alert">
-                      <span class="text-sm help">{{ field.help_text|safe }}</span>
-                      <button type="button" class="btn-close text-lg py-3 opacity-10" data-bs-dismiss="alert" aria-label="Close">
-                        <span aria-hidden="true">&times;</span>
-                      </button>
-                    </div>
-                  </div>
-                  {% endif %}
-                  {{ field.label_tag }}
-                  <div class="{% if field.field.widget|field_type == 'CustomRadioSelect' %}form-check form-check-inline{% elif field.field.widget|field_type == 'FieldSiteAllowEditLeaflet' %}col-md-12{% else %}input-group input-group-outline my-3{% endif %}">
-                    {{ field }}
-                  </div>
-                </div>
-                {% endfor %}
+
+                {% include 'account/includes/form-fields.html' %}
+
                 {% if redirect_field_value %}
                 <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
                 {% endif %}
