--- a/frontend/templates/account/password_change.html
+++ b/frontend/templates/account/password_change.html
@@ -1,7 +1,7 @@
 {% extends "layouts/django-material-kit/base-fullscreen.html" %}
-{% load i18n static %}
+{% load i18n static html_tags %}
 
-{% block extrastyle %}{{ block.super }}<link rel="stylesheet" type="text/css" href="{% static "utility/css/allauth_forms.css" %}">
+{% block extrastyle %}{{ block.super }}<link rel="stylesheet" type="text/css" href="{% static 'utility/css/allauth_forms.css' %}">
 {{ form.media }}
 {% endblock %}
 
@@ -28,11 +28,11 @@
                 <p class="mb-0 text-white text-center">
                   <!-- begin errors -->
                   {% if form.errors and not form.non_field_errors %}
-                  <p class="errornote">{% if form.errors.items|length == 1 %}{% translate "Please correct the error below." %}{% else %}{% translate "Please correct the errors below." %}{% endif %}</p>
+                  <p class="mb-0 text-center">{% if form.errors.items|length == 1 %}{% translate "Please correct the error below." %}{% else %}{% translate "Please correct the errors below." %}{% endif %}</p>
                   {% endif %}
                   {% if form.non_field_errors %}
                   {% for error in form.non_field_errors %}
-                  <p class="errornote">{{ error }}</p>
+                  <div class="alert alert-secondary text-white font-weight-bold" role="alert">{{ error }}</div>
                   {% endfor %}
                   {% endif %}
                   <!-- end errors -->
@@ -40,14 +40,20 @@
               </div>
             </div>
           </div>
-          <div class="card-body">
-            <form method="POST" action="{% url 'account_change_password' %}" class="password_change">
-                {% csrf_token %}
-                {{ form.as_p }}
-                <button class="btn btn-primary" type="submit" name="action">{% trans "Change Password" %}</button>
-                <a href="{% url 'account_reset_password' %}">{% trans "Forgot Password?" %}</a>
-            </form>
-          </div>
+          <form method="POST" action="{% url 'account_change_password' %}" class="password_change">
+            {% csrf_token %}
+            <div class="card-body pt-1">
+
+              {% include 'account/includes/form-fields.html' %}
+
+              <div class="row">
+                <div class="col-md-12 text-end ms-auto">
+                  <button class="btn btn-primary" type="submit" name="action">{% trans "Change Password" %}</button>
+                  <a href="{% url 'account_reset_password' %}">{% trans "Forgot Password?" %}</a>
+                </div>
+              </div>
+            </div>
+          </form>
         </div>
       </div>
     </div>
