--- a/frontend/templates/account/password_reset.html
+++ b/frontend/templates/account/password_reset.html
@@ -1,8 +1,8 @@
 {% extends "layouts/django-material-kit/base-fullscreen.html" %}
-{% load i18n static %}
+{% load i18n static html_tags %}
 {% load account %}
 
-{% block extrastyle %}{{ block.super }}<link rel="stylesheet" type="text/css" href="{% static "utility/css/allauth_forms.css" %}">
+{% block extrastyle %}{{ block.super }}<link rel="stylesheet" type="text/css" href="{% static 'utility/css/allauth_forms.css' %}">
 {{ form.media }}
 {% endblock %}
 
@@ -29,11 +29,11 @@
                 <p class="mb-0 text-white text-center">
                   <!-- begin errors -->
                   {% if form.errors and not form.non_field_errors %}
-                  <p class="errornote">{% if form.errors.items|length == 1 %}{% translate "Please correct the error below." %}{% else %}{% translate "Please correct the errors below." %}{% endif %}</p>
+                  <p class="mb-0 text-center">{% if form.errors.items|length == 1 %}{% translate "Please correct the error below." %}{% else %}{% translate "Please correct the errors below." %}{% endif %}</p>
                   {% endif %}
                   {% if form.non_field_errors %}
                   {% for error in form.non_field_errors %}
-                  <p class="errornote">{{ error }}</p>
+                  <div class="alert alert-secondary text-white font-weight-bold" role="alert">{{ error }}</div>
                   {% endfor %}
                   {% endif %}
                   <!-- end errors -->
@@ -41,18 +41,24 @@
               </div>
             </div>
           </div>
-          <div class="card-body">
-            {% if user.is_authenticated %}
-            {% include "account/snippets/already_logged_in.html" %}
-            {% endif %}
-            <p>{% trans "Forgotten your password? Enter your e-mail address below, and we'll send you an e-mail allowing you to reset it." %}</p>
-            <form method="POST" action="{% url 'account_reset_password' %}" class="password_reset">
-                {% csrf_token %}
-                {{ form.as_p }}
-                <input class="btn btn-primary" type="submit" value="{% trans 'Reset My Password' %}" />
-            </form>
-            <p>{% blocktrans %}Please contact us if you have any trouble resetting your password.{% endblocktrans %}</p>
-          </div>
+          {% if user.is_authenticated %}
+          {% include "account/snippets/already_logged_in.html" %}
+          {% endif %}
+          <p>{% trans "Forgotten your password? Enter your e-mail address below, and we'll send you an e-mail allowing you to reset it." %}</p>
+          <form method="POST" action="{% url 'account_reset_password' %}" class="password_reset">
+            {% csrf_token %}
+            <div class="card-body pt-1">
+
+              {% include 'account/includes/form-fields.html' %}
+
+              <div class="row">
+                <div class="col-md-6 text-end ms-auto">
+                  <input class="btn btn-primary" type="submit" value="{% trans 'Reset My Password' %}" />
+                  <p>{% blocktrans %}Please contact us if you have any trouble resetting your password.{% endblocktrans %}</p>
+                </div>
+              </div>
+            </div>
+          </form>
         </div>
       </div>
     </div>
