--- a/frontend/templates/account/password_set.html
+++ b/frontend/templates/account/password_set.html
@@ -1,7 +1,7 @@
 {% extends "layouts/django-material-kit/base-fullscreen.html" %}
 {% load i18n static %}
 
-{% block extrastyle %}{{ block.super }}<link rel="stylesheet" type="text/css" href="{% static "utility/css/allauth_forms.css" %}">
+{% block extrastyle %}{{ block.super }}<link rel="stylesheet" type="text/css" href="{% static 'utility/css/allauth_forms.css' %}">
 {{ form.media }}
 {% endblock %}
 
@@ -28,11 +28,11 @@
                 <p class="mb-0 text-white text-center">
                   <!-- begin errors -->
                   {% if form.errors and not form.non_field_errors %}
-                  <p class="errornote">{% if form.errors.items|length == 1 %}{% translate "Please correct the error below." %}{% else %}{% translate "Please correct the errors below." %}{% endif %}</p>
+                  <p class="mb-0 text-center">{% if form.errors.items|length == 1 %}{% translate "Please correct the error below." %}{% else %}{% translate "Please correct the errors below." %}{% endif %}</p>
                   {% endif %}
                   {% if form.non_field_errors %}
                   {% for error in form.non_field_errors %}
-                  <p class="errornote">{{ error }}</p>
+                  <div class="alert alert-secondary text-white font-weight-bold" role="alert">{{ error }}</div>
                   {% endfor %}
                   {% endif %}
                   <!-- end errors -->
@@ -40,13 +40,19 @@
               </div>
             </div>
           </div>
-          <div class="card-body">
             <form method="POST" action="{% url 'account_set_password' %}" class="password_set">
               {% csrf_token %}
-              {{ form.as_p }}
-              <input class="btn btn-primary" type="submit" name="action" value="{% trans 'Set Password' %}"/>
+              <div class="card-body pt-1">
+
+                {% include 'account/includes/form-fields.html' %}
+
+                <div class="row">
+                  <div class="col-md-6 text-end ms-auto">
+                    <input class="btn btn-primary" type="submit" name="action" value="{% trans 'Set Password' %}"/>
+                  </div>
+                </div>
+              </div>
             </form>
-          </div>
         </div>
       </div>
     </div>
