--- a/frontend/templates/account/password_reset.html
+++ b/frontend/templates/account/password_reset.html
@@ -25,41 +25,40 @@
               <h4 class="text-white font-weight-bolder text-center mt-2 mb-0">
                 {% trans "Password Reset" %}
               </h4>
-              <div class="row mt-3">
-                <p class="mb-0 text-white text-center">
-                  <!-- begin errors -->
-                  {% if form.errors and not form.non_field_errors %}
-                  <p class="mb-0 text-center">{% if form.errors.items|length == 1 %}{% translate "Please correct the error below." %}{% else %}{% translate "Please correct the errors below." %}{% endif %}</p>
-                  {% endif %}
-                  {% if form.non_field_errors %}
-                  {% for error in form.non_field_errors %}
-                  <div class="alert alert-secondary text-white font-weight-bold" role="alert">{{ error }}</div>
-                  {% endfor %}
-                  {% endif %}
-                  <!-- end errors -->
-                </p>
+            </div>
+          </div>
+          <div class="card-body">
+            <div class="row mt-3">
+              <p class="mb-0 text-center">
+                {% if form.non_field_errors %}
+                <!-- START form non field errors -->
+                <div class="alert alert-secondary text-white font-weight-bold" role="alert">{{ form.non_field_errors }}</div>
+                <!-- END form non field errors -->
+                {% endif %}
+                {% if form.errors and not form.non_field_errors %}
+                <!-- begin errors -->
+                <p class="mb-0 text-center">{% if form.errors.items|length == 1 %}{% translate "Please correct the error below." %}{% else %}{% translate "Please correct the errors below." %}{% endif %}</p>
+                {% endif %}
+              </p>
+            </div>
+          </div>
+        </div>
+        {% if user.is_authenticated %}
+        {% include "account/snippets/already_logged_in.html" %}
+        {% endif %}
+        <form method="POST" action="{% url 'account_reset_password' %}" class="password_reset">
+          {% csrf_token %}
+          <div class="card-body pt-1">
+            <p>{% trans "Forgotten your password? Enter your e-mail address below, and we'll send you an e-mail allowing you to reset it." %}</p>
+            {% include 'account/includes/form-fields.html' %}
+            <div class="row">
+              <div class="col-md-12 text-end ms-auto">
+                <input class="btn btn-primary" type="submit" value="{% trans 'Reset My Password' %}" />
+                <p>{% blocktrans %}Please contact us if you have any trouble resetting your password.{% endblocktrans %}</p>
               </div>
             </div>
           </div>
-          {% if user.is_authenticated %}
-          {% include "account/snippets/already_logged_in.html" %}
-          {% endif %}
-          <p>{% trans "Forgotten your password? Enter your e-mail address below, and we'll send you an e-mail allowing you to reset it." %}</p>
-          <form method="POST" action="{% url 'account_reset_password' %}" class="password_reset">
-            {% csrf_token %}
-            <div class="card-body pt-1">
-
-              {% include 'account/includes/form-fields.html' %}
-
-              <div class="row">
-                <div class="col-md-6 text-end ms-auto">
-                  <input class="btn btn-primary" type="submit" value="{% trans 'Reset My Password' %}" />
-                  <p>{% blocktrans %}Please contact us if you have any trouble resetting your password.{% endblocktrans %}</p>
-                </div>
-              </div>
-            </div>
-          </form>
-        </div>
+        </form>
       </div>
     </div>
   </div>
