--- a/frontend/templates/account/signup-dashboard.html
+++ b/frontend/templates/account/signup-dashboard.html
@@ -44,7 +44,7 @@
                   {% endif %}
                   {% if form.errors and not form.non_field_errors %}
                   <!-- begin errors -->
-                  <p class="mb-0 text-center">{% if form.errors.items|length == 1 %}{% translate "Please correct the error below." %}{% else %}{% translate "Please correct the errors below." %}{% endif %}</p>
+                  <div class="alert alert-secondary text-white font-weight-bold" role="alert">{% if form.errors.items|length == 1 %}{% translate "Please correct the error below." %}{% else %}{% translate "Please correct the errors below." %}{% endif %}</div>
                   {% endif %}
                 </p>
               </div>
