--- a/frontend/templates/account/password_reset_done.html
+++ b/frontend/templates/account/password_reset_done.html
@@ -25,27 +25,28 @@
               <h4 class="text-white font-weight-bolder text-center mt-2 mb-0">
                 {% trans "Password Reset" %}
               </h4>
-              <div class="row mt-3">
-                <p class="mb-0 text-white text-center">
-                  <!-- begin errors -->
-                  {% if form.errors and not form.non_field_errors %}
-                  <p class="mb-0 text-center">{% if form.errors.items|length == 1 %}{% translate "Please correct the error below." %}{% else %}{% translate "Please correct the errors below." %}{% endif %}</p>
-                  {% endif %}
-                  {% if form.non_field_errors %}
-                  {% for error in form.non_field_errors %}
-                  <div class="alert alert-secondary text-white font-weight-bold" role="alert">{{ error }}</div>
-                  {% endfor %}
-                  {% endif %}
-                  <!-- end errors -->
-                </p>
-              </div>
             </div>
           </div>
-          <div class="card-body pt-1">
+          <div class="card-body">
+            <div class="row mt-3">
+              <p class="mb-0 text-center">
+                {% if form.non_field_errors %}
+                <!-- START form non field errors -->
+                <div class="alert alert-secondary text-white font-weight-bold" role="alert">{{ form.non_field_errors }}</div>
+                <!-- END form non field errors -->
+                {% endif %}
+                {% if form.errors and not form.non_field_errors %}
+                <!-- begin errors -->
+                <p class="mb-0 text-center">{% if form.errors.items|length == 1 %}{% translate "Please correct the error below." %}{% else %}{% translate "Please correct the errors below." %}{% endif %}</p>
+                {% endif %}
+              </p>
+            </div>
+          <div class="card-body pt-0">
             {% if user.is_authenticated %}
             {% include "account/snippets/already_logged_in.html" %}
             {% endif %}
             <p>{% blocktrans %}We have sent you an e-mail. If you have not received it please check your spam folder. Otherwise contact us if you do not receive it in a few minutes.{% endblocktrans %}</p>
+          </div>
           </div>
         </div>
       </div>
@@ -53,7 +54,7 @@
   </div>
   {% include 'includes/django-material-kit/footer-auth.html' %}
 </div>
-{% endblock %}
+{% endblock content %}
 
 <!-- Specific Page JS goes HERE  -->
 {% block javascripts %}{% endblock javascripts %}
