--- a/frontend/templates/account/password_reset_from_key.html
+++ b/frontend/templates/account/password_reset_from_key.html
@@ -24,23 +24,22 @@
               <h4 class="text-white font-weight-bolder text-center mt-2 mb-0">
                 {% if token_fail %}{% trans "Bad Token" %}{% else %}{% trans "Change Password" %}{% endif %}
               </h4>
-              <div class="row mt-3">
-                <p class="mb-0 text-white text-center">
-                  <!-- begin errors -->
-                  {% if form.errors and not form.non_field_errors %}
-                  <p class="mb-0 text-center">{% if form.errors.items|length == 1 %}{% translate "Please correct the error below." %}{% else %}{% translate "Please correct the errors below." %}{% endif %}</p>
-                  {% endif %}
-                  {% if form.non_field_errors %}
-                  {% for error in form.non_field_errors %}
-                  <div class="alert alert-secondary text-white font-weight-bold" role="alert">{{ error }}</div>
-                  {% endfor %}
-                  {% endif %}
-                  <!-- end errors -->
-                </p>
-              </div>
             </div>
           </div>
           <div class="card-body">
+            <div class="row mt-3">
+              <p class="mb-0 text-center">
+                {% if form.non_field_errors %}
+                <!-- START form non field errors -->
+                <div class="alert alert-secondary text-white font-weight-bold" role="alert">{{ form.non_field_errors }}</div>
+                <!-- END form non field errors -->
+                {% endif %}
+                {% if form.errors and not form.non_field_errors %}
+                <!-- begin errors -->
+                <p class="mb-0 text-center">{% if form.errors.items|length == 1 %}{% translate "Please correct the error below." %}{% else %}{% translate "Please correct the errors below." %}{% endif %}</p>
+                {% endif %}
+              </p>
+            </div>
             {% if token_fail %}
             {% url 'account_reset_password' as passwd_reset_url %}
             <p>{% blocktrans %}The password reset link was invalid, possibly because it has already been used.  Please request a <a href="{{ passwd_reset_url }}">new password reset</a>.{% endblocktrans %}</p>
@@ -48,12 +47,12 @@
             {% if form %}
             <form method="POST" action="{{ action_url }}">
               {% csrf_token %}
-              <div class="card-body pt-1">
+              <div class="card-body p-0">
 
                 {% include 'account/includes/form-fields.html' %}
 
                 <div class="row">
-                  <div class="col-md-6 text-end ms-auto">
+                  <div class="col-md-12 text-end ms-auto">
                     <input class="btn btn-primary" type="submit" name="action" value="{% trans 'change password' %}"/>
                   </div>
                 </div>
@@ -63,14 +62,14 @@
             <p>{% trans 'Your password is now changed.' %}</p>
             {% endif %}
             {% endif %}
-          </div>
+           </div>
         </div>
       </div>
     </div>
   </div>
   {% include 'includes/django-material-kit/footer-auth.html' %}
 </div>
-{% endblock %}
+{% endblock content %}
 
 <!-- Specific Page JS goes HERE  -->
 {% block javascripts %}{% endblock javascripts %}
