--- a/frontend/templates/account/verified_email_required.html
+++ b/frontend/templates/account/verified_email_required.html
@@ -24,10 +24,6 @@
               <h4 class="text-white font-weight-bolder text-center mt-2 mb-0">
                 {% trans "Verify Your E-mail Address" %}
               </h4>
-              <div class="row mt-3">
-                <p class="mb-0 text-white text-center">
-                </p>
-              </div>
             </div>
           </div>
           <div class="card-body">
@@ -42,7 +38,7 @@
   </div>
   {% include 'includes/django-material-kit/footer-auth.html' %}
 </div>
-{% endblock %}
+{% endblock content %}
 
 <!-- Specific Page JS goes HERE  -->
 {% block javascripts %}{% endblock javascripts %}
