--- a/frontend/templates/account/email.html
+++ b/frontend/templates/account/email.html
@@ -92,7 +92,7 @@
               <h6>{% trans "Add E-mail Address" %}</h6>
               <form method="POST" action="{% url 'account_email' %}" class="add_email">
                 {% csrf_token %}
-                <div class="card-body pt-1">
+                <div class="card-body p-0">
 
                   {% include 'account/includes/form-fields.html' %}
 
