--- a/frontend/templates/account/password_reset_from_key_done.html
+++ b/frontend/templates/account/password_reset_from_key_done.html
@@ -24,9 +24,6 @@
               <h4 class="text-white font-weight-bolder text-center mt-2 mb-0">
                 {% trans "Change Password" %}
               </h4>
-              <div class="row mt-3">
-                <p class="mb-0 text-white text-center"></p>
-              </div>
             </div>
           </div>
           <div class="card-body">
@@ -38,7 +35,7 @@
   </div>
   {% include 'includes/django-material-kit/footer-auth.html' %}
 </div>
-{% endblock %}
+{% endblock content %}
 
 <!-- Specific Page JS goes HERE  -->
 {% block javascripts %}{% endblock javascripts %}
