updated MCGE logo for localcontexts public page

--- a/frontend/templates/home/django-material-kit/localcontexts.html
+++ b/frontend/templates/home/django-material-kit/localcontexts.html
@@ -126,7 +126,7 @@
                   </div>
                   <div class="col-md-4 col-12 my-auto">
                       <a target="_blank" href="https://umaine.edu/mcge/">
-                          <img class="w-100 border-radius-lg shadow-lg p-2" src="https://storage.googleapis.com/anth-ja77-local-contexts-8985.appspot.com/users/institution-images/d19200a8-5b51-433c-9adb-2083c12a42de.png" alt="maine center for genetics in the environment logo">
+                          <img class="w-100 border-radius-lg shadow-lg p-2" src="{% static 'assets/img/logos/logo-mcge.png' %}" alt="maine center for genetics in the environment logo">
                       </a>
                   </div>
               </div>
